# MyCMake

./: .gitignore  README.md
02_Targets_and_Libraries/: README.md
02_Targets_and_Libraries/source/: CMakeLists.txt  exe1.cpp  lib1.hpp  lib2.cpp  lib21.hpp  lib3.cpp
05_Subdirectories/: README.md
05_Subdirectories/source/: CMakeLists.txt
05_Subdirectories/source/parent_scope/: CMakeLists.txt
05_Subdirectories/source/variables/: CMakeLists.txt
06_Function_and_Macros/: README.md
06_Function_and_Macros/source/: CMakeLists.txt
1_Basic/: README.md
1_Basic/source/: CMakeLists.txt
26_Installing/: README.md
26_Installing/add_subdirectory/source/: CMakeLists.txt  testlib
26_Installing/find_package/source/: CMakeLists.txt  main.cpp
26_Installing/lib/source/: CMakeLists.txt
26_Installing/lib/source/src/: testlib.cpp
2_Targets_and_Libraries/source/: dev.cpp  exe2.cpp  exe3.cpp  lib1.cpp  lib2.hpp  lib21.cpp  lib3.hpp  lib31.cpp  lib31.hpp
3_Variables/: README.md
3_Variables/source/: CMakeLists.txt
4_Flow_Control/: README.md
4_Flow_Control/source/: CMakeLists.txt
5_Subdirectories/source/include/: CMakeLists.txt
5_Subdirectories/source/subdir/: CMakeLists.txt
container/: README.md  recipe.def  recipe.py
